--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
             <img src="2.jpg" alt="Imagen" class="w-full h-auto md:h-full">
         </div>
         <div class="md:w-1/2  p-8 flex flex-col justify-center">
-            <h1 class="text-6xl sm:text-6xl font-bold text-left">Bienvenido a</h1>
-            <h1 class=" text-red-500 text-6xl font-bold text-left">FULLGYM</h1>
+            <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-7xl">Bienvenidos a <span class=" text-transparent bg-clip-text bg-gradient-to-r to-red-400 from-red-500">FULLGYM</span></h1>
             <p class="text-base sm:text-2xl mb-4 max-w-screen-xl text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <div class="bottom-6">
                 <button class="button2 font-semibold" onclick="scrollToSection('HORARIOS')">Nuestros Horarios</button>
