--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <section class=" py-44 bg-cover bg-top bg-no-repeat bg-slate-900 bg-blend-multiply" style="background-image: url(handsome-shirtless-man-with-stylish-hair-muscular-ectomorph-body-doing-exercises-with-dumbbells-dark-textured-background.jpg); background-color: rgb(91, 92, 104); background-blend-mode: multiply;">
     <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">ENTRENA DURO <span class=" text-transparent bg-clip-text bg-gradient-to-r to-red-400 from-red-500">VIVE MAS FUERTE</span></h1>
-        <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Here at Flowbite we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p>
+        <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Here at Instagram we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p>
         <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
             <button class="transition duration-150 ease-in-out inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-white dark:focus:ring-blue-900">
                 ¡Empieza ahora!
@@ -86,7 +86,7 @@
             <img src="2.jpg" alt="Imagen" class="w-full h-auto md:h-full">
         </div>
         <div class="md:w-1/2  p-8 flex flex-col justify-center">
-            <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-7xl">Bienvenidos a <span class=" text-transparent bg-clip-text bg-gradient-to-r to-red-400 from-red-500">FULLGYM</span></h1>
+            <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-7xl">Bienvenidos a <span class=" text-transparent bg-clip-text bg-gradient-to-r to-red-400 from-red-500">FULLGYM</span></h1>
             <p class="text-base sm:text-2xl mb-4 max-w-screen-xl text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <div class="bottom-6">
                 <button class="button2 font-semibold" onclick="scrollToSection('HORARIOS')">Nuestros Horarios</button>
