--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <ul class="text-white flex font-semibold">
                 
                 <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#NOSOTROS" onclick="smoothScroll('NOSOTROS')">Nosotros</a></li>
-                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#ACTIVIDADES">Actividades</a></li>
-                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#HORARIOS">Horarios</a></li>
-                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#CONTACTO">Contacto</a></li>
+                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#ACTIVIDADES"onclick="scrollToSection('ACTIVIDADES')>Actividades</a></li>
+                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#HORARIOS"onclick="scrollToSection('HORARIOS')>Horarios</a></li>
+                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#CONTACTO"onclick="scrollToSection('CONTACTO')>Contacto</a></li>
             </ul>
         </div>
         <!-- Botón de hamburguesa (visible en mobile) -->
@@ -53,9 +53,9 @@
         <div class="md:hidden bg-red-500" id="menuColapsable">
             <ul class="text-white flex flex-row justify-center">
                 <li class="py-2 px-4 border-b"><a href="#NOSOTROS" class="block" onclick="smoothScroll('NOSOTROS')">Nosotros</a></li>
-                <li class="py-2 px-4 border-b"><a href="#ACTIVIDADES" class="block">Actividades</a></li>
-                <li class="py-2 px-4 border-b"><a href="#HORARIOS" class="block">Horarios</a></li>
-                <li class="py-2 px-4"><a href="#CONTACTO" class="block">Contacto</a></li>
+                <li class="py-2 px-4 border-b"><a href="#ACTIVIDADES" class="block"onclick="scrollToSection('ACTIVIDADES')>Actividades</a></li>
+                <li class="py-2 px-4 border-b"><a href="#HORARIOS" class="block"onclick="scrollToSection('HORARIOS')>Horarios</a></li>
+                <li class="py-2 px-4"><a href="#CONTACTO" class="block"onclick="scrollToSection('CONTACTO')>Contacto</a></li>
             </ul>
         </div>
         </section>
@@ -67,13 +67,13 @@
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">ENTRENA DURO <span class=" text-transparent bg-clip-text bg-gradient-to-r to-red-400 from-red-500">VIVE MAS FUERTE</span></h1>
         <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Here at Instagram we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p>
         <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
-            <button class="transition duration-150 ease-in-out inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-white dark:focus:ring-blue-900">
+            <button class="transition duration-150 ease-in-out inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-white dark:focus:ring-blue-900"onclick="scrollToSection('CONTACTANOS')>
                 ¡Empieza ahora!
                 <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                 </svg>
             </a></button>
-            <a href="#" class="inline-flex justify-center hover:text-gray-900 items-center py-3 px-5 sm:ms-4 text-base font-medium text-center text-white rounded-lg border border-white hover:bg-gray-100 focus:ring-4 focus:ring-gray-400">
+            <a href="#" class="inline-flex justify-center hover:text-gray-900 items-center py-3 px-5 sm:ms-4 text-base font-medium text-center text-white rounded-lg border border-white hover:bg-gray-100 focus:ring-4 focus:ring-gray-400"onclick="scrollToSection('NOSOTROS') >
                 Mas información
             </a>  
         </div>
