--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <ul class="text-white flex font-semibold">
                 
                 <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#NOSOTROS" onclick="smoothScroll('NOSOTROS')">Nosotros</a></li>
-                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#ACTIVIDADES"onclick="scrollToSection('ACTIVIDADES')>Actividades</a></li>
-                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#HORARIOS"onclick="scrollToSection('HORARIOS')>Horarios</a></li>
-                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#CONTACTO"onclick="scrollToSection('CONTACTO')>Contacto</a></li>
+                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#ACTIVIDADES"onclick="scrollToSection('ACTIVIDADES')">Actividades</a></li>
+                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#HORARIOS"onclick="scrollToSection('HORARIOS')">Horarios</a></li>
+                <li class="md:px-4 md:py-2 hover:text-red-500"><a href="#CONTACTO"onclick="scrollToSection('CONTACTO')">Contacto</a></li>
             </ul>
         </div>
         <!-- Botón de hamburguesa (visible en mobile) -->
@@ -53,9 +53,9 @@
         <div class="md:hidden bg-red-500" id="menuColapsable">
             <ul class="text-white flex flex-row justify-center">
                 <li class="py-2 px-4 border-b"><a href="#NOSOTROS" class="block" onclick="smoothScroll('NOSOTROS')">Nosotros</a></li>
-                <li class="py-2 px-4 border-b"><a href="#ACTIVIDADES" class="block"onclick="scrollToSection('ACTIVIDADES')>Actividades</a></li>
-                <li class="py-2 px-4 border-b"><a href="#HORARIOS" class="block"onclick="scrollToSection('HORARIOS')>Horarios</a></li>
-                <li class="py-2 px-4"><a href="#CONTACTO" class="block"onclick="scrollToSection('CONTACTO')>Contacto</a></li>
+                <li class="py-2 px-4 border-b"><a href="#ACTIVIDADES" class="block"onclick="scrollToSection('ACTIVIDADES')">Actividades</a></li>
+                <li class="py-2 px-4 border-b"><a href="#HORARIOS" class="block"onclick="scrollToSection('HORARIOS')">Horarios</a></li>
+                <li class="py-2 px-4"><a href="#CONTACTO" class="block"onclick="scrollToSection('CONTACTO')">Contacto</a></li>
             </ul>
         </div>
         </section>
