--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
   </section>
 
   <section id="hero">
-    <div class="py-16 flex flex-col text-center w-full mb-20">
-      <h1 class=" text-6xl font-bold title-font mb-4 text-gray-900">NUESTROS <span class="text-red-500">HORARIOS</span></h1>
-      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Descubre todas nuestras actividades que tenemos para ofrecerte.</p>
+    <div class="py-16 flex flex-col text-center w-full">
+      <h1 class=" text-6xl font-bold title-font mb-4 text-gray-900">NUESTROS <span class="text-red-500">PLANES</span></h1>
+      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Ajustaste al plan que mejor se acomode a tus necesidades.</p>
     </div>
     <div class="relative items-center w-full mx-auto md:px-12 lg:px-16 max-w-7xl">
       <div>
