--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               <li class="md:px-4 md:py-2 hover:text-red-500" onclick="scrollToSection('ACTIVIDADES')">Actividades</li>
               <li class="md:px-4 md:py-2 hover:text-red-500" onclick="scrollToSection('HORARIOS')">Horarios</li>
               <li class="md:px-4 md:py-2 hover:text-red-500" onclick="scrollToSection('CONTACTO')">Contacto</li>
+                <li class="md:px-4 md:py-2 hover:text-red-500" onclick="scrollToSection('PLANES')">Contacto</li>
             </ul>
           </div>
 
@@ -69,6 +70,7 @@
                 <li class="py-2 px-4 border-b" class="block"onclick="scrollToSection('ACTIVIDADES')">Actividades</li>
                 <li class="py-2 px-4 border-b" class="block"onclick="scrollToSection('HORARIOS')">Horarios</li>
                 <li class="py-2 px-4" class="block"onclick="scrollToSection('CONTACTO')">Contacto</li>
+                 <li class="md:px-4 md:py-2 hover:text-red-500" onclick="scrollToSection('PLANES')">Contacto</li>
             </ul>
         </div>
         </section>
@@ -280,7 +282,7 @@
   </section>
 
   <section id="hero">
-    <div class="py-16 flex flex-col text-center w-full">
+    <div id="PLANES" class="py-16 flex flex-col text-center w-full">
       <h1 class=" text-6xl font-bold title-font mb-4 text-gray-900">NUESTROS <span class="text-red-500">PLANES</span></h1>
       <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Ajustaste al plan que mejor se acomode a tus necesidades.</p>
     </div>
