--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </div>
   </section>
 
-  <section id="hero">
+  <section id="hero" class="bg-slate-300">
     <div id="PLANES" class="py-16 flex flex-col text-center w-full">
       <h1 class=" text-6xl font-bold title-font mb-4 text-gray-900">NUESTROS <span class="text-red-500">PLANES</span></h1>
       <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Ajustaste al plan que mejor se acomode a tus necesidades.</p>
