--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
         </section>
 
         <section id="hero" class="flex justify-center items-center">
-          <div class="w-full h-52 bg-gradient-to-r from-red-500 to-red-700 flex justify-center items-center">
-            <div class="grid lg:grid-cols-3">
-              <div class=" p-4 flex flex-col items-center justify-center mx-16">
+          <div class="w-full bg-gradient-to-r from-red-500 to-red-700 flex justify-center items-center">
+            <div class="container mx-auto grid gap-4 lg:gap-8 lg:grid-cols-3">
+              <div class="p-4 flex flex-col items-center justify-center">
                 <img src="musculo.png" alt="Icono" class="w-16 h-16 mb-2 text-white">
-                <span class="text-white text-center text-2xl font-medium">MANTENTE FUERTE</span>
+                <span class="text-white text-center text-lg lg:text-2xl font-medium">MANTENTE FUERTE</span>
               </div>
-              <div class=" p-4 flex flex-col items-center justify-center mx-16">
+              <div class="p-4 flex flex-col items-center justify-center">
                 <img src="pesa.png" alt="Icono" class="w-16 h-16 mb-2 text-white">
-                <span class="text-white text-center text-2xl font-medium">ENTRENA DURO</span>
+                <span class="text-white text-center text-lg lg:text-2xl font-medium">ENTRENA DURO</span>
               </div>
-              <div class=" p-4 flex flex-col items-center justify-center mx-16">
+              <div class="p-4 flex flex-col items-center justify-center">
                 <img src="objetivo.png" alt="Icono" class="w-16 h-16 mb-2 text-white">
-                <span class="text-white text-center text-2xl font-medium">CUMPLE TUS OBJETIVOS</span>
+                <span class="text-white text-center text-lg lg:text-2xl font-medium">CUMPLE TUS OBJETIVOS</span>
               </div>
             </div>
           </div>
