--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <li class="py-2 px-4 border-b" class="block" onclick="smoothScroll('NOSOTROS')">Nosotros</li>
                 <li class="py-2 px-4 border-b" class="block"onclick="scrollToSection('ACTIVIDADES')">Actividades</li>
                 <li class="py-2 px-4 border-b" class="block"onclick="scrollToSection('HORARIOS')">Horarios</li>
-                <li class="py-2 px-4" class="block"onclick="scrollToSection('CONTACTO')">Contacto</li>
-                <li class="md:px-4 md:py-2 hover:text-red-500" onclick="scrollToSection('PLANES')">Nuestros Planes</li>
+                <li class="py-2 px-4 border-b" class="block"onclick="scrollToSection('CONTACTO')">Contacto</li>
+                <li class="py-2 px-4 border-b" onclick="scrollToSection('PLANES')">Nuestros Planes</li>
             </ul>
         </div>
         </section>
