--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Landing Page</title>
-        <link rel="icon" href="LOGO PNG.png">
+        <link rel="icon" href="LOGOBLACK PNG.png">
     
         <!-- Importar Tailwind CSS -->
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
