--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div id="ACTIVIDADES" class="container px-5 py-16 mx-auto">
             <div class="text-center w-full mb-10">
               <h2 class="text-3xl text-gray-50  font-medium  mb-4">Explora</h2>
-              <h1 class=" text-6xl font-bold title-font mb-4 text-white">NUESTROS <span class="text-transparent bg-clip-text bg-gradient-to-r to-red-400 from-pink-700">ACTIVIDADES</span></h1>
+              <h1 class=" text-6xl font-bold title-font mb-4 text-white">NUESTRAS <span class="text-transparent bg-clip-text bg-gradient-to-r to-red-400 from-pink-700">ACTIVIDADES</span></h1>
             </div>
             <div class="sm:grid-cols-2 md:flex flex-row lg:flex">
                 <div class=" transform  flex-1 md:w-1/2 p-4  transition duration-300 hover:scale-105  ">
